// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component > Render home page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <h1>
        WAXDISC
      </h1>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_home_621afd"
      >
        <div
          class="_storeImageContainer_621afd"
        >
          <img
            alt="Interior of a vinyl store"
            src="/src/assets/store-interior.jpg"
          />
          <div
            class="_storeImageOverlay_621afd"
          >
            <p>
              New vinyls every week
            </p>
            <br />
            <p>
              Open everyday: 10am - 6pm
            </p>
          </div>
        </div>
        <p>
          Loading...
        </p>
      </div>
    </main>
    <footer
      class="_footer_812fc8"
    >
      <div>
        <h2>
          WAXDISC
        </h2>
        <p>
          Home to Australia's best vinyl collection
        </p>
      </div>
      <ul>
        <h4>
          Help
        </h4>
        <li>
          <a>
            Track my order
          </a>
        </li>
        <li>
          <a>
            Returns
          </a>
        </li>
        <li>
          <a>
            Contact us
          </a>
        </li>
        <li>
          <a>
            Terms and conditions
          </a>
        </li>
      </ul>
      <ul>
        <h4>
          Company
        </h4>
        <li>
          <a>
            About us
          </a>
        </li>
        <li>
          <a>
            Store location
          </a>
        </li>
        <li>
          <a>
            Careers
          </a>
        </li>
        <li>
          <a>
            News
          </a>
        </li>
        <li>
          <a>
            Feedback
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`App component > Visit cart page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <h1>
        WAXDISC
      </h1>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_cartContainer_7e8544"
      >
        <h2
          class="_title_7e8544"
        >
          Your Cart
        </h2>
        <p>
          Your cart is empty
        </p>
      </div>
    </main>
    <footer
      class="_footer_812fc8"
    >
      <div>
        <h2>
          WAXDISC
        </h2>
        <p>
          Home to Australia's best vinyl collection
        </p>
      </div>
      <ul>
        <h4>
          Help
        </h4>
        <li>
          <a>
            Track my order
          </a>
        </li>
        <li>
          <a>
            Returns
          </a>
        </li>
        <li>
          <a>
            Contact us
          </a>
        </li>
        <li>
          <a>
            Terms and conditions
          </a>
        </li>
      </ul>
      <ul>
        <h4>
          Company
        </h4>
        <li>
          <a>
            About us
          </a>
        </li>
        <li>
          <a>
            Store location
          </a>
        </li>
        <li>
          <a>
            Careers
          </a>
        </li>
        <li>
          <a>
            News
          </a>
        </li>
        <li>
          <a>
            Feedback
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`App component > Visit home page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <h1>
        WAXDISC
      </h1>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_home_621afd"
      >
        <div
          class="_storeImageContainer_621afd"
        >
          <img
            alt="Interior of a vinyl store"
            src="/src/assets/store-interior.jpg"
          />
          <div
            class="_storeImageOverlay_621afd"
          >
            <p>
              New vinyls every week
            </p>
            <br />
            <p>
              Open everyday: 10am - 6pm
            </p>
          </div>
        </div>
        <p>
          Loading...
        </p>
      </div>
    </main>
    <footer
      class="_footer_812fc8"
    >
      <div>
        <h2>
          WAXDISC
        </h2>
        <p>
          Home to Australia's best vinyl collection
        </p>
      </div>
      <ul>
        <h4>
          Help
        </h4>
        <li>
          <a>
            Track my order
          </a>
        </li>
        <li>
          <a>
            Returns
          </a>
        </li>
        <li>
          <a>
            Contact us
          </a>
        </li>
        <li>
          <a>
            Terms and conditions
          </a>
        </li>
      </ul>
      <ul>
        <h4>
          Company
        </h4>
        <li>
          <a>
            About us
          </a>
        </li>
        <li>
          <a>
            Store location
          </a>
        </li>
        <li>
          <a>
            Careers
          </a>
        </li>
        <li>
          <a>
            News
          </a>
        </li>
        <li>
          <a>
            Feedback
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`App component > Visit non-existent page 1`] = `
<div>
  <p>
    I think you might be lost 🧐
  </p>
</div>
`;

exports[`App component > Visit shop page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <h1>
        WAXDISC
      </h1>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <p>
        Loading...
      </p>
    </main>
    <footer
      class="_footer_812fc8"
    >
      <div>
        <h2>
          WAXDISC
        </h2>
        <p>
          Home to Australia's best vinyl collection
        </p>
      </div>
      <ul>
        <h4>
          Help
        </h4>
        <li>
          <a>
            Track my order
          </a>
        </li>
        <li>
          <a>
            Returns
          </a>
        </li>
        <li>
          <a>
            Contact us
          </a>
        </li>
        <li>
          <a>
            Terms and conditions
          </a>
        </li>
      </ul>
      <ul>
        <h4>
          Company
        </h4>
        <li>
          <a>
            About us
          </a>
        </li>
        <li>
          <a>
            Store location
          </a>
        </li>
        <li>
          <a>
            Careers
          </a>
        </li>
        <li>
          <a>
            News
          </a>
        </li>
        <li>
          <a>
            Feedback
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;
